@@ -1,6 +1,7 @@
 2009-03-20 Frank Naegler  <typo3@naegler.net>
 
 	* added new validator: tx_feuserregister_validator_Age
+	* added stdWraps for fields, labels and errorMessages
 
 2009-03-19 Frank Naegler  <typo3@naegler.net>
 
